--- a/frontend/src/test-dashboard.html
+++ b/frontend/src/test-dashboard.html
@@ -96,7 +96,7 @@
                 <h2 class="text-xl font-bold mb-4">🤖 FREE AI-Powered Analysis</h2>
                 <p class="text-gray-600 mb-4">Get intelligent insights from your test data - completely FREE!</p>
                 
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
                     <!-- AI Demo -->
                     <div class="border rounded-lg p-4 bg-blue-50">
                         <h3 class="font-semibold mb-2 text-blue-800">🎯 AI Demo</h3>
@@ -129,21 +129,8 @@
                                     class="w-full px-3 py-2 bg-green-600 text-white rounded-md hover:bg-green-700 text-sm">
                                 🤖 Analyze Data
                             </button>
-                        </div>
-                    </div>
-
-                    <!-- AI Setup -->
-                    <div class="border rounded-lg p-4 bg-purple-50">
-                        <h3 class="font-semibold mb-2 text-purple-800">⚙️ AI Setup</h3>
-                        <p class="text-sm text-gray-600 mb-3">Configure AI provider</p>
-                        <div class="space-y-2">
-                            <button onclick="showAICapabilities()" 
-                                    class="w-full px-3 py-2 bg-purple-600 text-white rounded-md hover:bg-purple-700 text-sm">
-                                📋 View AI Options
-                            </button>
                             <p class="text-xs text-gray-500 mt-2">
-                                Current: Mock AI (FREE)<br>
-                                Available: Ollama, HuggingFace
+                                Using: Mock AI (FREE) • <button onclick="showAICapabilities()" class="text-blue-600 hover:underline">View Options</button>
                             </p>
                         </div>
                     </div>
