--- a/frontend/src/test-dashboard.html
+++ b/frontend/src/test-dashboard.html
@@ -397,7 +397,18 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:8080';
+        // Dynamic API base URL for different environments
+        function getApiBaseUrl() {
+            // Check if we're in local development
+            if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+                return 'http://localhost:8080';
+            }
+            
+            // For Railway or any deployed environment, use same origin
+            return window.location.origin;
+        }
+        
+        const API_BASE = getApiBaseUrl();
 
         // Check API status on load
         document.addEventListener('DOMContentLoaded', function() {
