🔧 Refactor to proper two-service architecture
✅ Separated frontend and backend services:
- Backend: Pure API service (Spring Boot) - serves /api/* and /actuator/*
- Frontend: Static file service (nginx) - serves HTML/CSS/JS

✅ Changes made:
- Removed WebConfig conflicts from backend
- Reverted Dockerfile.backend to not include frontend files
- Updated frontend to call backend service URL
- Added environment variable injection for BACKEND_URL
- Created separate Railway service configurations

✅ Deployment approach:
- Deploy backend service using Dockerfile.backend
- Deploy frontend service using Dockerfile.frontend
- Configure environment variables for cross-service communication

This follows proper microservices architecture with clear separation of concerns.

--- a/frontend/src/test-dashboard.html
+++ b/frontend/src/test-dashboard.html
@@ -404,8 +404,9 @@
                 return 'http://localhost:8080';
             }
             
-            // For Railway or any deployed environment, use same origin
-            return window.location.origin;
+            // For Railway deployment, use environment-specific backend URL
+            // You'll need to replace this with your actual Railway backend URL
+            return 'https://qa-automation-backend-production.railway.app';
         }
         
         const API_BASE = getApiBaseUrl();
